--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://mark-kirby.co.uk"
+baseurl = "http://mark-kirby.co.uk/"
 languageCode = "en-us"
 title = "Mark Kirby - Mobile Developer"
