--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.3.1",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.7"
   }
 }
