--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseurl = "http://mark-kirby.co.uk/"
 languageCode = "en-us"
-title = "Mark Kirby - mobile, cloud and IoT"
+title = "Mark Kirby - mobile, cloud, voice and IoT"
 DisqusShortname = 'markkirby'
